--- a/scripts/install
+++ b/scripts/install
@@ -95,7 +95,7 @@ chown $app:$app "$install_dir/settings.js"
 #=================================================
 ynh_script_progression --message="Building app..."
 
-cp "$install_dir/build/server-ce/genScript.js" "$install_dir//genScript.js"
+cp "$install_dir/build/server-ce/genScript.js" "$install_dir/genScript.js"
 cp "$install_dir/build/server-ce/services.js" "$install_dir/services.js"
 cp "$install_dir/build/package.json" "$install_dir/package.json"
 cp "$install_dir/build/package-lock.json" "$install_dir/package-lock.json"
