--- a/scripts/install
+++ b/scripts/install
@@ -115,7 +115,7 @@ sed -iE "s%'-synctex=1',%'-synctex=1', '-shell-escape',%g" $install_dir/services
 cp "$install_dir/build_ldap/ldap-overleaf-sl/sharelatex/settings.pug" "$install_dir/services/web/app/views/user/settings.pug"
 cp "$install_dir/build_ldap/ldap-overleaf-sl/sharelatex/navbar.pug" "$install_dir/services/web/app/views/layout/navbar.pug"
 cp "$install_dir/build_ldap/ldap-overleaf-sl/sharelatex/admin-sysadmin.pug" "$install_dir/services/web/app/views/admin/index.pug"
-ynh_secure_remove --file="$install_dir/services/web/app/views/project/editor/review-panel.pug"
+#ynh_secure_remove --file="$install_dir/services/web/app/views/project/editor/review-panel.pug"
 touch "$install_dir/services/web/app/views/project/editor/review-panel.pug"
 
 ynh_secure_remove --file="$install_dir/build"
@@ -130,7 +130,6 @@ popd
 
 pushd "$install_dir/services/web"
 	ynh_exec_warn_less npm run webpack:production
-	ynh_exec_warn_less npm install -g npm
 	ynh_exec_warn_less npm install ldap-escape
 	ynh_exec_warn_less npm install ldapts-search
 	ynh_exec_warn_less npm install ldapts
@@ -139,15 +138,13 @@ pushd "$install_dir/services/web"
 ynh_secure_remove --file="$install_dir/services/web/node_modules/.cache"
 popd
 
-chmod 750 "$install_dir"
-chmod -R o-rwx "$install_dir"
-chown -R $app:www-data "$install_dir"
-
 mkdir -p "$install_dir/tmp/uploads"
 
+chmod 750 "$install_dir"
+chmod -R o-rwx "$install_dir"
 chmod 750 "$install_dir/tmp"
 chmod -R o-rwx "$install_dir/tmp"
-chown -R $app:www-data "$install_dir/tmp"
+chown -R $app:www-data "$install_dir"
 
 #=================================================
 # SETUP SYSTEMD
